scrolling table and alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -531,6 +531,7 @@ table.dataTable tbody td {
 @media screen and (max-width: 768px) {
     .quantityWrapper {
         width: 134px;
+        margin-bottom: 8px;
     }
 
     .quantityInput {
